# NodesPostPro

./: .gitignore  NodesPostPro.code-workspace  README.md  example.pkl  nodes_plt.py  setup.cfg  test.csv  test_subplots.py
NodeGraphQt/: constants.py
NodeGraphQt/base/: node.py
NodeGraphQt/nodes/: base_node.py
NodeGraphQt/widgets/: node_widgets.py  test_pd_identical.py
NodesPlt/: exemple_sigma.general  exemple_value.general  make_pickle.py  nodes_plt.py
NodesPlt/nodes/: cast_nodes.py  generic_node.py  get_column_nodes.py  input_nodes.py  numpy_nodes.py  operation_nodes.py  pickle_nodes.py  plt_node.py  read_file_nodes.py  tripoli_nodes.py
NodesPostPro/: __main__.py  main.py
NodesPostPro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
NodesPostPro/example_files/: test.csv
NodesPostPro/examples/: color_maps.json  external_iterator_column_plot.json  interator_column_plot.json  internal_iterator_random.json  iterator_filter.json  iterator_random_hist.json  multi_plot.json  pickle_imshow_save.json  print_two_element_math.json  read_csv.json  tripoli_fill_between.json
NodesPostPro/hotkeys/: hotkeys.json  (+3 more)
examples/: interator_column_plot.json  internal_iterator_random.json  pickle_imshow_save.json  read_csv.json  tripoli_fill_between.json
hotkeys/: hotkey_functions.py  hotkeys.json
nodes/: cast_nodes.py  container.py  custom_widgets.py  generic_node.py  get_column_nodes.py  input_nodes.py  iterator_nodes.py  list_nodes.py  numpy_nodes.py  operation_nodes.py  pandas_nodes.py  pickle_nodes.py  plt_node.py  random_nodes.py  read_file_nodes.py  tripoli_nodes.py
(+20 files in other folders)
