[metadata]
name = NodesPostPro
version= 0.1
author=Zelfior
license = MIT License
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node based post processing python tool.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.6
url = https://github.com/Zelfior/NodesPostPro

[options]
python_requires = >=3.6
install_requires =
    Qt.py>=1.2.0
    NodeGraphQt >= 0.5.5
    PySide2>=5.15
